<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.mashup.frienitto.register.RegisterFragmentViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|left"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_auth_code"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_code"
                style="@style/FrenttoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email_code"
                android:onTextChanged="@{(text, start, before, count) -> viewModel.onCodeTextChange(text)}" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/FrenttoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/round"
            android:backgroundTint="@color/orange"
            android:text="@string/email_reauth"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/FrenttoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round"
            android:backgroundTint="@{viewModel.isWriteCode ? @color/navy : @color/gray}"
            android:enabled="@{viewModel.isWriteCode}"
            android:onClick="@{(view) -> viewModel.goNextStep(2)}"
            android:text="@string/ok"
            android:textColor="@color/white" />

    </LinearLayout>

</layout>