<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.mashup.frienitto.register.RegisterFragmentViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|left"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/used_email"
                android:inputType="textEmailAddress"
                android:onTextChanged="@{(text, start, before, count) -> viewModel.onEmailTextChange(text)}"
                android:textSize="12sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/FrenttoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round"
            android:backgroundTint="@{viewModel.isWriteEamil ? @color/orange : @color/gray}"
            android:enabled="@{viewModel.isWriteEamil}"
            android:onClick="@{(view) -> viewModel.sendConfirmEmail()}"
            android:text="@string/email_auth"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>
</layout>